[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/Player Animations/Idle/PlayerAnimations-1.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/snow_tileset/tileset_snow_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/MaskController.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fog_of_war.png" type="Texture" id=5]
[ext_resource path="res://assets/backgrounds/Bg (2).png" type="Texture" id=6]
[ext_resource path="res://scenes/PlayerLightMask.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/World.gd" type="Script" id=8]
[ext_resource path="res://assets/backgrounds/Bg (5).png" type="Texture" id=9]
[ext_resource path="res://assets/backgrounds/Bg (4).png" type="Texture" id=10]
[ext_resource path="res://assets/backgrounds/Bg (1).png" type="Texture" id=11]
[ext_resource path="res://scenes/enemies/Nightmare.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/projectiles/ChalkProjectiles-2.png" type="Texture" id=13]
[ext_resource path="res://scenes/Satchel.gd" type="Script" id=14]
[ext_resource path="res://assets/projectiles/ChalkProjectiles-4.png" type="Texture" id=15]
[ext_resource path="res://assets/projectiles/ChalkProjectiles-1.png" type="Texture" id=16]
[ext_resource path="res://assets/projectiles/ChalkProjectiles-3.png" type="Texture" id=17]
[ext_resource path="res://assets/Player Animations/Idle/PlayerAnimations-2.png" type="Texture" id=18]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 4.67798, -8.7196, 0, 0, 0, 0, 83.0782, -34.1467, 0, 0, 0, 0, 182.668, -36.2656, 0, 0, 0, 0, 254.711, -6.60071, 0, 0, 0, 0, 337.349, 29.421, 0, 0, 0, 0, 489.912, 40.0156, 0, 0, 0, 0, 564.074, 16.7075, 0, 0, 0, 0, 636.118, -12.9575, 0, 0, 0, 0, 716.637, -29.9089, 0, 0, 0, 0, 799.275, -2.36292, 0, 0, 0, 0, 858.605, 29.421, 0, 0, 0, 0, 930.649, 69.6807, 0, 0, 0, 0, 983.622, 73.9185, 0, 0, 0, 0, 1059.9, 6.11279, 0, 0, 0, 0, 1047.19, -44.7413, 0, 0, 0, 0, 998.454, -59.5739, 0, 0, 0, 0, 926.411, -55.3361, 0, 0, 0, 0, 858.605, -32.0278, 0, 0, 0, 0, 818.346, -10.8386, 0, 0, 0, 0, 790.8, 1.875, 0, 0, 0, 0, 733.589, 23.0642, 0, 0, 0, 0, 691.21, 29.421, 0, 0, 0, 0, 631.88, 27.3021, 0, 0, 0, 0, 549.242, -2.36292, 0, 0, 0, 0, 498.388, -25.671, 0, 0, 0, 0, 456.009, -29.9089, 0, 0, 0, 0, 356.42, -29.9089, 0, 0, 0, 0, 271.663, -8.7196, 0, 0, 0, 0, 225.046, 10.3507, 0, 0, 0, 0, 153.003, 25.1832, 0, 0, 0, 0, 91.554, 31.5399, 0, 0, 0, 0, 27.9862, 23.0642, 0, 0, 0, 0, -8.03552, 3.9939, 0, 0, 0, 0, 4.67798, -8.7196 )
}

[sub_resource type="Animation" id=4]
resource_name = "Default"
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="World" type="Node2D"]
script = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 108, 268 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 1000 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 84, 180 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 1000 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 39.6829, 202.683 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 1000 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 393.95, 303.626 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 1000 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196609, 0, 0, 196610, 0, 1, 196611, 0, 1, 196612, 0, 1, 196613, 0, 1, 196614, 0, 1, 196615, 0, 1, 196616, 0, 1, 196617, 0, 1, 196618, 0, 1, 196619, 0, 1, 196620, 0, 1, 196621, 0, 1, 196622, 0, 1, 196623, 0, 1, 196624, 0, 1, 196625, 0, 1, 196626, 0, 1, 196627, 0, 1, 196628, 0, 1, 196629, 0, 1, 196630, 0, 1, 196631, 0, 1, 196632, 0, 1, 196633, 0, 1, 196634, 0, 1, 196635, 0, 1, 196636, 0, 1, 196637, 0, 2, 262145, 0, 65536, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65538, 327681, 0, 65536, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65538, 393217, 0, 65536, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65538, 458753, 0, 65536, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65537, 458776, 0, 65537, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65537, 458780, 0, 65537, 458781, 0, 65538, 524289, 0, 65536, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65537, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65537, 524312, 0, 65537, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 65537, 524317, 0, 65538, 589825, 0, 65536, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65537, 589843, 0, 65537, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65537, 589848, 0, 65537, 589849, 0, 65537, 589850, 0, 65537, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65538, 655361, 0, 65536, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65538, 720897, 0, 65536, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65538, 786433, 0, 65536, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65537, 786451, 0, 65537, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65538, 851969, 0, 65536, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65537, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 65537, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65538, 917505, 0, 65536, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65537, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65537, 917528, 0, 65537, 917529, 0, 65537, 917530, 0, 65537, 917531, 0, 65537, 917532, 0, 65537, 917533, 0, 65538, 983041, 0, 131072, 983042, 0, 131073, 983043, 0, 131073, 983044, 0, 131073, 983045, 0, 131073, 983046, 0, 131073, 983047, 0, 131073, 983048, 0, 131073, 983049, 0, 131073, 983050, 0, 131073, 983051, 0, 131073, 983052, 0, 131073, 983053, 0, 131073, 983054, 0, 131073, 983055, 0, 131073, 983056, 0, 131073, 983057, 0, 131073, 983058, 0, 131073, 983059, 0, 131073, 983060, 0, 131073, 983061, 0, 131073, 983062, 0, 131073, 983063, 0, 131073, 983064, 0, 131073, 983065, 0, 131073, 983066, 0, 131073, 983067, 0, 131073, 983068, 0, 131073, 983069, 0, 131074 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 4.67798, -8.7196 )
rotation = -0.313621
rotate = false

[node name="Nightmare" parent="Path2D/PathFollow2D" instance=ExtResource( 12 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D"]
autoplay = "Default"
anims/Default = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 86.5135, 31.319 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 6.93739, 50.664 )
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 6 )
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 16, 16 )
current = true

[node name="MaskController" parent="Player" instance=ExtResource( 4 )]
position = Vector2( 6.0965, 42.8857 )
MaskTexture = ExtResource( 7 )

[node name="Arrows" type="Node2D" parent="Player"]
script = ExtResource( 14 )

[node name="NormalArrow" type="Sprite" parent="Player/Arrows"]
position = Vector2( 40, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 16 )

[node name="PassionArrow" type="Sprite" parent="Player/Arrows"]
position = Vector2( 0, -40 )
rotation = -1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )

[node name="Squarrow" type="Sprite" parent="Player/Arrows"]
position = Vector2( -40, 0 )
rotation = -3.14159
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 17 )

[node name="PiercingArrow" type="Sprite" parent="Player/Arrows"]
position = Vector2( 0, 40 )
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 15 )

[node name="BackBufferCopy" type="BackBufferCopy" parent="." groups=[
"FogSurface",
]]
copy_mode = 2

[node name="Fog" type="Sprite" parent="BackBufferCopy"]
position = Vector2( 114.499, 222.697 )
scale = Vector2( 7.82851, 2.16228 )
texture = ExtResource( 5 )
